# CS495-EEG-Based-Error-Potentials

./: .gitignore  README.md  data_processor.py  errp_plot_no_mne.py  main.py  pyproject.toml  visualizer.py
src/: main.py
src/data_processing/: data_loader.py  data_processor.py
src/data_visualization/: visualizer.py
src/gui/: file_window.py
src/gui/themes/: light_theme.py
src/gui/utils/: checkbox.py  drag_and_drop.py
