[project]
name = "cs495-eeg-based-error-potentials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyqt5>=5.15.10",
    "scipy>=1.15.3",
]

[tool.uv]
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]